Move download CLI test to separate step

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -133,3 +133,8 @@ jobs:
       python -m spacy download en_core_web_sm
       python -c "import spacy; nlp=spacy.load('en_core_web_sm'); doc=nlp('test')"
     displayName: 'Run tests'
+
+  - script: |
+      python -m spacy download en_core_web_sm
+      python -c "import spacy; nlp=spacy.load('en_core_web_sm'); doc=nlp('test')"
+    displayName: 'Test download CLI'
