Update CI: update ubuntu image, add download test
* Switch instances to `ubuntu-18.04`
* Add model download test, currently only for one job with python 3.8

--- a/.github/azure-steps.yml
+++ b/.github/azure-steps.yml
@@ -55,3 +55,9 @@ steps:
       ${{ parameters.prefix }} python -m pytest --pyargs spacy -p spacy.tests.enable_gpu
     displayName: "Run GPU tests"
     condition: eq(${{ parameters.gpu }}, true)
+
+  - script: |
+      python -m spacy download en_core_web_sm
+      python -c "import spacy; nlp=spacy.load('en_core_web_sm'); doc=nlp('test')"
+    displayName: 'Test download CLI'
+    condition: eq({{ $parameters.python_version }}, '3.8')
