--- a/.github/azure-steps.yml
+++ b/.github/azure-steps.yml
@@ -60,4 +60,4 @@ steps:
       python -m spacy download en_core_web_sm
       python -c "import spacy; nlp=spacy.load('en_core_web_sm'); doc=nlp('test')"
     displayName: 'Test download CLI'
-    condition: eq({{ $parameters.python_version }}, '3.8')
+    condition: eq(${{ parameters.python_version }}, '3.8')
