--- a/.github/azure-steps.yml
+++ b/.github/azure-steps.yml
@@ -11,6 +11,10 @@ steps:
       versionSpec: ${{ parameters.python_version }}
       architecture: ${{ parameters.architecture }}
 
+  - bash: |
+      echo "##vso[task.setvariable variable=python_version]${{ parameters.python_version }}"
+    displayName: 'Set variables'
+
   - script: |
       ${{ parameters.prefix }} python -m pip install -U pip setuptools
       ${{ parameters.prefix }} python -m pip install -U -r requirements.txt
@@ -55,3 +59,9 @@ steps:
       ${{ parameters.prefix }} python -m pytest --pyargs spacy -p spacy.tests.enable_gpu
     displayName: "Run GPU tests"
     condition: eq(${{ parameters.gpu }}, true)
+
+  - script: |
+      python -m spacy download en_core_web_sm
+      python -c "import spacy; nlp=spacy.load('en_core_web_sm'); doc=nlp('test')"
+    displayName: 'Test download CLI'
+    condition: eq(variables['python_version'], '3.8')
