Restrict cython to <3.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,7 @@ zip_safe = false
 include_package_data = true
 python_requires = >=3.6
 setup_requires =
-    cython>=0.25
+    cython>=0.25,<3.0
     numpy>=1.15.0
     # We also need our Cython packages here to compile against
     cymem>=2.0.2,<2.1.0
