--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ setuptools
 packaging>=20.0
 typing_extensions>=3.7.4.1,<4.0.0.0; python_version < "3.8"
 # Development dependencies
+pre-commit>=2.13.0
 cython>=0.25,<3.0
 pytest>=5.2.0
 pytest-timeout>=1.3.0,<2.0.0
