Try workflow_dispatch and schedule [ci skip]

--- a/.github/workflows/autoblack.yml
+++ b/.github/workflows/autoblack.yml
@@ -3,9 +3,9 @@
 
 name: autoblack
 on:
-  # schedule:
-  #   cron: '0 8 * * 5'  # every Friday at 8am UTC
   workflow_dispatch:  # allow manual trigger
+  schedule:
+    cron: '0 8 * * 5'  # every Friday at 8am UTC
 
 jobs:
   autoblack:
