--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,3 +8,8 @@ repos:
     rev: 3.9.2
     hooks:
     - id: flake8
+      args:
+        - "--count"
+        - "--select=E901,E999,F821,F822,F823"
+        - "--show-source"
+        - "--statistics"
