--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,4 @@ repos:
     hooks:
     - id: flake8
       args:
-        - "--count"
-        - "--select=E901,E999,F821,F822,F823"
-        - "--show-source"
-        - "--statistics"
+        - "--config=setup.cfg"
