Make the autoblack job not run on forks
The autoblack job is an occasional cleanup job. If it runs on forks and
those PRs are accepted the git history will be weird and that doesn't
help anyone.

The way to make the job not run on forks is a little non-obvious but
based on this thread.

https://github.com/prisma/prisma/issues/3539

--- a/.github/workflows/autoblack.yml
+++ b/.github/workflows/autoblack.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   autoblack:
+    if: github.repository_owner = 'explosion'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
