updated for bsc changes
New tokenization changes

--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,6 @@ Desktop.ini
 
 # IPython
 .ipynb_checkpoints/
+spacy/lang/ca/tokenizer_exceptions.py.bak
+spacy/lang/ca/punctuation.py.bak
+*.bak
