--- a/spacy/default_config.cfg
+++ b/spacy/default_config.cfg
@@ -9,7 +9,7 @@ seed = 0
 gpu_allocator = null
 
 [nlp]
-lang = null
+lang = "en"
 # List of pipeline component names, in order. The names should correspond to
 # components defined in the [components block]
 pipeline = []
