Set default gpu allocator to pytorch if available

--- a/spacy/default_config.cfg
+++ b/spacy/default_config.cfg
@@ -22,6 +22,7 @@ after_creation = null
 after_pipeline_creation = null
 # Default batch size to use with nlp.pipe and nlp.evaluate
 batch_size = 1000
+gpu_allocator = "pytorch"
 
 [nlp.tokenizer]
 @tokenizers = "spacy.Tokenizer.v1"
