--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,10 +14,10 @@ trigger:
 pr:
   paths:
     include:
-      - "*.cfg"
-      - "*.py"
-      - "*.toml"
-      - "*.yml"
+      - "setup.cfg"
+      - "setup.py"
+      - "pyproject.toml"
+      - "azure-pipelines.yml"
       - ".github/azure-steps.yml"
       - "spacy/*"
       - "website/meta/universe.json"
