Adjust wildcard patterns

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ trigger:
       - "v2.spacy.io"
   paths:
     exclude:
-      - "website/*"
+      - "website/**"
       - "*.md"
 pr:
   paths:
@@ -19,7 +19,7 @@ pr:
       - "pyproject.toml"
       - "azure-pipelines.yml"
       - ".github/azure-steps.yml"
-      - "spacy/*"
+      - "spacy/**"
       - "website/meta/universe.json"
 
 jobs:
