--- a/setup.cfg
+++ b/setup.cfg
@@ -130,3 +130,11 @@ ignore_missing_imports = True
 no_implicit_optional = True
 plugins = pydantic.mypy, thinc.mypy
 allow_redefinition = True
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = spacy/_version.py
+versionfile_build = spacy/_version.py
+tag_prefix = v
+parentdir_prefix = spacy-
