--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,7 @@
 [build-system]
 requires = [
     "setuptools",
+    "wheel",
     "cython>=0.25,<3.0",
     "cymem>=2.0.2,<2.1.0",
     "preshed>=3.0.2,<3.1.0",
@@ -10,4 +11,3 @@ requires = [
     "pathy",
     "numpy>=1.15.0",
 ]
-build-backend = "setuptools.build_meta"
