--- a/setup.cfg
+++ b/setup.cfg
@@ -96,6 +96,12 @@ cuda111 =
     cupy-cuda111>=5.0.0b4,<10.0.0
 cuda112 =
     cupy-cuda112>=5.0.0b4,<10.0.0
+cuda113 =
+    cupy-cuda113>=5.0.0b4,<10.0.0
+cuda114 =
+    cupy-cuda114>=5.0.0b4,<10.0.0
+cuda115 =
+    cupy-cuda115>=5.0.0b4,<10.0.0
 # Language tokenizers with external dependencies
 ja =
     sudachipy>=0.4.9
