--- a/setup.cfg
+++ b/setup.cfg
@@ -95,6 +95,8 @@ cuda111 =
     cupy-cuda111>=5.0.0b4,<10.0.0
 cuda112 =
     cupy-cuda112>=5.0.0b4,<10.0.0
+apple =
+    thinc-apple-ops>=0.0.4,<1.0.0
 # Language tokenizers with external dependencies
 ja =
     sudachipy>=0.4.9
