--- a/setup.cfg
+++ b/setup.cfg
@@ -95,6 +95,10 @@ cuda111 =
     cupy-cuda111>=5.0.0b4,<10.0.0
 cuda112 =
     cupy-cuda112>=5.0.0b4,<10.0.0
+cuda113 =
+    cupy-cuda113>=5.0.0b4,<10.0.0
+cuda114 =
+    cupy-cuda114>=5.0.0b4,<10.0.0
 apple =
     thinc-apple-ops>=0.0.4,<1.0.0
 # Language tokenizers with external dependencies
