Update docs for max_steps

--- a/spacy/default_config.cfg
+++ b/spacy/default_config.cfg
@@ -75,6 +75,7 @@ patience = 1600
 # memory and shuffled within the training loop. -1 means stream train corpus
 # rather than loading in memory with no shuffling within the training loop.
 max_epochs = 0
+# Maximum number of update steps to train for. 0 means an unlimited number of steps.
 max_steps = 20000
 eval_frequency = 200
 # Control how scores are printed and checkpoints are evaluated.
