--- a/.github/workflows/gputests.yml
+++ b/.github/workflows/gputests.yml
@@ -1,6 +1,6 @@
 on:
   schedule:
-    - cron: '0 0 * * 1'
+    - cron: '0 1 * * MON'
 
 jobs:
   weekly-gputests:
@@ -12,8 +12,8 @@ jobs:
       - name: Trigger buildkite build
         uses: buildkite/trigger-pipeline-action@v1.2.0
         env:
-          PIPELINE: explosion-ai/spacy-gpu-test-suite
+          PIPELINE: explosion-ai/spacy-slow-gpu-tests
           BRANCH: ${{ matrix.branch }}
-          MESSAGE: ":github: Weekly GPU tests - triggered from a GitHub Action"
+          MESSAGE: ":github: Weekly GPU + slow tests - triggered from a GitHub Action"
         secrets:
           BUILDKITE_API_ACCESS_TOKEN: ${{ secrets.BUILDKITE_SECRET }}
