--- a/.github/workflows/slowtests.yml
+++ b/.github/workflows/slowtests.yml
@@ -3,6 +3,9 @@ name: Daily slow tests
 on:
   schedule:
     - cron: '0 0 * * *'
+  push:
+    branches:
+      - "rfd-datemath-debugging"
 
 jobs:
   daily-slowtests:
@@ -19,7 +22,7 @@ jobs:
         run: |
           today=$(date '+%Y-%m-%d %H:%M:%S')
           yesterday=$(date -d "yesterday" '+%Y-%m-%d %H:%M:%S')
-          if git log --after=$yesterday --before=$today | grep commit ; then
+          if git log --after="$yesterday" --before="$today" | grep commit ; then
             echo "::set-output name=run_tests::true"
           else
             echo "::set-output name=run_tests::false"
