--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ spacy-loggers>=1.0.0,<2.0.0
 cymem>=2.0.2,<2.1.0
 preshed>=3.0.2,<3.1.0
 thinc>=8.0.12,<8.1.0
-blis>=0.4.0,<0.8.0
+blis==0.7.6
 ml_datasets>=0.2.0,<0.3.0
 murmurhash>=0.28.0,<1.1.0
 wasabi>=0.8.1,<1.1.0
