--- a/setup.cfg
+++ b/setup.cfg
@@ -47,7 +47,7 @@ install_requires =
     cymem>=2.0.2,<2.1.0
     preshed>=3.0.2,<3.1.0
     thinc>=8.0.12,<8.1.0
-    blis==0.7.6
+    blis==0.7.6,
     wasabi>=0.8.1,<1.1.0
     srsly>=2.4.1,<3.0.0
     catalogue>=2.0.6,<2.1.0
