--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ requires = [
     "preshed>=3.0.2,<3.1.0",
     "murmurhash>=0.28.0,<1.1.0",
     "thinc>=8.0.12,<8.1.0",
-    "blis==0.7.6",
+    "blis>=0.4.0,<0.8.0",
     "pathy",
     "numpy>=1.15.0",
 ]
